--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next": "13.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.4",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
