--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.4",
+    "react-redux": "^8.0.5",
+    "redux-saga": "^1.2.2",
     "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.6"
   },
