--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "easymde": "^2.18.0",
     "eslint-config-next": "13.1.0",
+    "firebase": "^9.16.0",
     "next": "13.1.0",
     "normalize.css": "^8.0.1",
     "react": "18.2.0",
